WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287498
REGRESSION(
286147@main
): text-decoration-thickness style is not reflected on phanpy.social
https://bugs.webkit.org/show_bug.cgi?id=287498
Summary
REGRESSION(286147@main): text-decoration-thickness style is not reflected on ...
alan
Reported
2025-02-11 11:08:10 PST
<
rdar://144529057
>
Attachments
Patch
(7.46 KB, patch)
2025-02-11 11:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.48 KB, patch)
2025-02-11 13:52 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.45 KB, patch)
2025-02-11 13:53 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.46 KB, patch)
2025-02-11 15:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.43 KB, patch)
2025-02-11 17:35 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-02-11 11:10:40 PST
Created
attachment 474206
[details]
Patch
Darin Adler
Comment 2
2025-02-11 12:21:28 PST
Comment on
attachment 474206
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=474206&action=review
> Source/WebCore/rendering/TextBoxPainter.cpp:718 > + auto& styleToUseForDecoration = decoratingBoxStyle(makeIterator());
Maybe styleForDecoration would be equally clear? And it’s shorter.
alan
Comment 3
2025-02-11 13:52:20 PST
Created
attachment 474207
[details]
Patch
alan
Comment 4
2025-02-11 13:53:37 PST
Created
attachment 474208
[details]
Patch
alan
Comment 5
2025-02-11 13:54:11 PST
(In reply to Darin Adler from
comment #2
)
> Comment on
attachment 474206
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=474206&action=review
> > > Source/WebCore/rendering/TextBoxPainter.cpp:718 > > + auto& styleToUseForDecoration = decoratingBoxStyle(makeIterator()); > > Maybe styleForDecoration would be equally clear? And it’s shorter.
Yeah, you are right. Fixed.
alan
Comment 6
2025-02-11 15:05:34 PST
Created
attachment 474212
[details]
Patch
alan
Comment 7
2025-02-11 17:35:18 PST
Created
attachment 474213
[details]
[fast-cq]Patch
EWS
Comment 8
2025-02-11 19:25:14 PST
Committed
290249@main
(58b0e56a3633): <
https://commits.webkit.org/290249@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 474213
[details]
.
EWS
Comment 9
2025-02-18 11:36:34 PST
Committed
289651.136@safari-7621-branch
(c7e6a47afcc0): <
https://commits.webkit.org/289651.136@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2623 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug