REGRESSION(286147@main): text-decoration-thickness style is not reflected on phanpy.social https://bugs.webkit.org/show_bug.cgi?id=287498 <rdar://144529057>

Reviewed by Antti Koivisto.

Let's use the decorating box way to collect text-decoration-thickness style (which technically the same as prior to 286147@main where the
RenderText did return its parent style).

* LayoutTests/fast/inline/incorrect-line-through-thickness-expected.html: Added.
* LayoutTests/fast/inline/incorrect-line-through-thickness.html: Added.
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter::collectDecoratingBoxesForBackgroundPainting):
(WebCore::TextBoxPainter::paintBackgroundDecorations):
(WebCore::decoratingBoxStyle):
(WebCore::TextBoxPainter::paintForegroundDecorations):
(WebCore::TextBoxPainter::collectDecoratingBoxesForTextBox): Deleted.
* Source/WebCore/rendering/TextBoxPainter.h:

Canonical link: https://commits.webkit.org/290249@main